Breadcrumbs for dkey now show group description #269
I think Sid is crazy here - many of the descriptions are way too long to
be useful in the navigation summary - but let's let him take a look at
what his request has wrought and get back to us on it.

--- a/gobotany/dkey/templates/dkey/_breadcrumbs.html
+++ b/gobotany/dkey/templates/dkey/_breadcrumbs.html
@@ -1,6 +1,6 @@
 {% load dkey_filters %}
 {% for ancestor in page|breadcrumbs %}
-  {% with atitle=ancestor|display_title|nobr %}
+  {% with atitle=ancestor|breadcrumb_title|nobr %}
     {% if forloop.counter0 == 0 %}
       <a href="{% url dkey %}">« Back to the {{ atitle }}</a>
     {% else %}
