--- a/gobotany/static/sass/_dkey.scss
+++ b/gobotany/static/sass/_dkey.scss
@@ -103,6 +103,7 @@ $disabled_orange_gradient: linear-gradient(
             display: block;
             padding: 1em;
             color: black;
+            line-height: 1.25em;
             &:hover {
                 background-color: #d3e7b4;
                 text-decoration: none;
