Fix #271 by correcting "Choose this X" message
Before, "Choose this species" would be displayed above a dkey button
that in fact lead to a tribe, if that tribe in fact contained exactly
one species. Now, we use a more stringent check so that "Choose this X"
messages are only used to decorate dkey buttons that in fact lead to
precisely the taxon that it claims can be chosen.

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -86,7 +86,12 @@
       {% with p=lead.goto_page %}
       <div class="lead">
         <div class="button-block">
-          {% if lead.taxa_rank and lead.taxa_set|length > 1 %}
+          {% if lead.taxa_rank and lead.taxa_rank == p.rank and lead.taxa_set|length == 1 %}
+            <a class="what-lies-beneath" href="{{ p.title|dkey_url }}">
+              Choose this {{ lead.taxa_rank }}
+            </a>
+          <br>
+          {% elif lead.taxa_rank %}
             <a class="what-lies-beneath" href="."
                data-taxa="{{ lead.taxa_list }}">
               See list of {{ lead.taxa_set|length }}
@@ -94,11 +99,6 @@
               {% if lead.letter %}
                 in {{ lead.letter }}
               {% endif %}
-            </a>
-          <br>
-          {% elif lead.taxa_rank and lead.taxa_set|length == 1 %}
-            <a class="what-lies-beneath" href="{{ p.title|dkey_url }}">
-              Choose this {{ lead.taxa_rank }}
             </a>
           <br>
           {% endif %}
