--- a/gobotany/simplekey/templates/simplekey/_script_constants.html
+++ b/gobotany/simplekey/templates/simplekey/_script_constants.html
@@ -1,7 +1,7 @@
 <script>
     API_URL = '{% url api-base %}';
     SEARCH_URL = '{% url search %}';
-    SUGGEST_URL = '{% url simplekey-search-suggest %}';
+    SUGGEST_URL = '{% url site-search-suggestions %}';
 
     /* Get rid of Ember 0.9.8.1 warnings by telling it to go ahead and
        behave like the future. */
