--- a/gobotany/site/templates/gobotany/suggest_test.html
+++ b/gobotany/site/templates/gobotany/suggest_test.html
@@ -82,7 +82,7 @@
                 <input type="text" autocomplete="off"
                     name="identification"
                     id="id_identification2"
-                    value="acer pensylvanicum"
+                    value="Acer pensylvanicum"
                     placeholder="scientific or common name"
                     class="suggest"
                     data-suggest-url="{% url site-plant-name-suggestions %}?q=%s">
