--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -558,7 +558,7 @@ input.suggest {
         li {
             list-style-type: none;
             padding: 0 2px;
-            &.selected, &:hover {
+            &.selected {
                 background-color: #666;
                 color: #fff;
             }
