--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -696,8 +696,9 @@ body.plantshare #sidebar #login.box div { border-top: 1px solid #508e31; padding
 #advanced-map .choose-btn:active { background-position: 0 -64px; }
 
 /* Glossary */
-/* Glossary term underline for popup */
-.gloss { border-bottom: 1px dashed; cursor: pointer; }
+.gloss { color: #508e31; cursor: pointer; }
+
+.gloss:hover { border-bottom: 1px dashed; }
 
 #glossary #alphabet { height: 33px; list-style-type: none; margin: 7px 0; padding: 0; width: 712px; /* 2px wider than its parent box so no wrap in Moz */ }
 #glossary #alphabet li { border-left: 1px solid #e1e1dc; float: left; font-size: 18px; margin: 0; padding: 0 7px; }
