Add a template 'include' with parameters for getting a static map image.
This is a first step toward #206, which aims to provide a way to show
maps that will eventually include sightings. So far this is a simple
static map call to MapQuest for a location. Also updated the
PlantShare Sighting form to use it and widened the map there. (#235)

--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -21,8 +21,7 @@
             <label for="id_location">Location *</label>
             <div class="location">
                 {{ form.location }}
-                <img
-                src="http://open.mapquestapi.com/staticmap/v4/getplacemap?location=43.1220,-70.482313&size=150,139&type=map&zoom=5&imagetype=png&showicon=green-1">
+                {% include "_location_map.html" with location="Framingham, MA" height="150" width="302" zoom="6" %}
             </div>
 
             {{ form.location_notes.errors }}
