Add the ability to automatically update a map upon location input.
Allow location maps to be associated with location input fields so
that when the user updates the location in the field, the map will
automatically update to the new location. (#235, #206)

--- a/gobotany/mapping/templates/_location_map.html
+++ b/gobotany/mapping/templates/_location_map.html
@@ -6,6 +6,6 @@ requires lat./long. coordinates instead of a flexible location parameter.
 (Also, the choice of map provider is not necessarily permanent, as map
 services are still being evaluated.)
 {% endcomment %}
-<img class="location-map" 
+<img id="{{ id }}" class="location-map" 
     src="http://open.mapquestapi.com/staticmap/v4/getplacemap?location={{ location }}&size={{ width }},{{ height }}&type=map&zoom={{ zoom }}&imagetype=jpeg&showicon=green-1"
     alt="Map: {{ location }}">
