Simplified how the dkey page is built #267
This will make it easier to, as a next step, create a link that pops up
all of the taxa that lie beneath the couplets of a particular page.

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -104,13 +104,15 @@
           {% endif %}
           <a class="button"
           {% spaceless %}
-          {% if lead.nextnum %}
-            href="#c{{ lead.nextnum }}">CHOOSE THIS LEAD
+          {% if lead.child_couplet_number %}
+            href="#c{{ lead.child_couplet_number }}">CHOOSE THIS LEAD
           {% elif lead.goto_num %}
             href="#c{{ lead.goto_num }}">JUMP TO {{ lead.goto_num }}
           {% elif p.rank == 'species' %}
             href="{% url simplekey-species p.title|genus_slug p.title|species_slug %}?key=dichotomous"
               ><i>{{ p.title|abbreviate_title }}</i>
+          {% elif not p %}
+            >—
           {% else %}
             href="{% url dkey_page p|slug %}"
             {% if p.rank == 'group' %}
