--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -51,6 +51,12 @@
 
 {% if title == 'Key to the Families' %}
   <h1>Dichotomous Key to Families</h1>
+{% elif page.rank == 'family' %}
+  <h1><a href="{% url simplekey-family page.title|lastword|slugify %}"
+         >{{ title }}</a></h1>
+{% elif page.rank == 'genus' %}
+  <h1><a href="{% url simplekey-genus page.title|slugify %}"
+         ><i>{{ title }}</i></a></h1>
 {% else %}
   <h1>{{ title }}</h1>
 {% endif %}
