--- a/gobotany/static/sass/_site-media-queries.scss
+++ b/gobotany/static/sass/_site-media-queries.scss
@@ -138,6 +138,7 @@
             }
             > a:hover {
                 background: $nav-button-color;
+                text-decoration: none;
             }
             #search {
                 margin-top: 6px;
