--- a/gobotany/plantshare/templates/registration/registration_complete.html
+++ b/gobotany/plantshare/templates/registration/registration_complete.html
@@ -4,6 +4,10 @@
 
 {% block body_attributes %}id="complete" class="plantshare"{% endblock %}
 
+{% block js_require %}
+    require(['plantshare/registration_complete']);
+{% endblock %}
+
 {% block main_content %}
 <h1>Registration Complete</h1>
 
