--- a/gobotany/plantshare/templates/_plantshare_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_navigation.html
@@ -1,4 +1,3 @@
-{% load facebook_connect %}
 {% load gobotany_tags %}
 <div class="box">
     <div class="section">
@@ -24,15 +23,6 @@
     {% endif %}
 </div>
 
-{% if not user.is_authenticated %}
-<div id="login" class="box">
-    <h4>Log In</h4>
-    {% include "_login_form.html" %}
-    <div>
-        <a href="#">
-            {% facebook_button %}
-        </a>
-    </div>
-</div>
-{% facebook_script %}
+{% if not user.is_authenticated and not prior_signup_detected %}
+    {% include "_login_box.html" %}
 {% endif %}
